# cellsem_llm_client

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PHASE3_PLAN.md  README.md  ROADMAP.md  project_setup_plan.md  pyproject.toml
.github/workflows/: docs.yml  test.yml  update_rates.yml
docs/: conf.py  contributing.md  cost_tracking.md  index.md  installation.md  quickstart.md  schema_enforcement.md
docs/_static/: .gitkeep
planning/: CODEX_MCP_POC_REPORT.md  POC_README.md  README.md  ROADMAP.md  async-downstream-guidance.md  async-support-analysis.md  cost_tracking_improvements.md  litellm-feature-optimization-analysis.md  phase3-priority2-schema-compliance.md  potential_issue_fixes.md
planning/archive/: dashboard-testing-plan.md
scripts/: check-docs.py  update_rates.py
src/cellsem_llm_client/: __init__.py  exceptions.py
src/cellsem_llm_client/advisors/: __init__.py  benchmarks.py  complexity_analyzer.py  model_advisor.py
src/cellsem_llm_client/agents/: __init__.py  agent_connection.py
src/cellsem_llm_client/files/: __init__.py  capabilities.py  processors.py
src/cellsem_llm_client/schema/: __init__.py  adapters.py  manager.py  validators.py
src/cellsem_llm_client/tools/: __init__.py  mcp_source.py  ols_mcp.py  tool.py
src/cellsem_llm_client/tracking/: __init__.py  api_trackers.py  cost_calculator.py  rate_database.py  rates.json  usage_metrics.py
src/cellsem_llm_client/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py
tests/fixtures/schemas/: analysis_result.json  simple_task.json  user_profile.json
tests/integration/: __init__.py  test_agent_integration.py  test_mcp_source_integration.py  test_ols_mcp_integration.py  test_schema_enforcement.py
tests/integration/files/: __init__.py
tests/integration/schema/: __init__.py
tests/integration/tracking/: __init__.py
tests/unit/: __init__.py  test_agent_connection.py  test_api_trackers.py  test_config.py  test_cost_calculator.py  test_mcp_source.py  test_ols_mcp_tool.py  test_schema_adapters.py  test_schema_integration.py  test_schema_manager.py  test_schema_validators.py  test_tool.py  test_usage_metrics.py
tests/unit/advisors/: __init__.py
tests/unit/files/: __init__.py
tests/unit/schema/: __init__.py
tests/unit/tracking/: __init__.py
